--- a/src/App.css
+++ b/src/App.css
@@ -125,6 +125,10 @@ header {
 
 .hero {
     padding: 100px 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .hero__text {
@@ -134,7 +138,10 @@ header {
 }
 
 .hero__text p {
-    width: 80%;
+    font-size: 1.125rem;
+    line-height: 30px;
+    /* width: 80%; */
+    margin: 1.5em 0;
 }
 
 .form__area {
@@ -143,18 +150,27 @@ header {
 
 .submit-location {
     font-size: 1rem;
-    padding: 1em 2em;
+    padding: 0.8em 4em;
     display: inline-block;
     background-color: #A02279;
     color: #fff;
 
-    border-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-top-right-radius: 10px;
     border: none;
 }
 
 .search-location {
-    display: inline-block;
     width: 60%;
+    padding: 1em;
+
+    border-right: none;
+    border-bottom-left-radius: 10px;
+    border-top-left-radius: 10px;
+}
+
+.search-location[text] {
+    font-size: 1rem;
 }
 
 .hero__image {
