--- a/src/App.css
+++ b/src/App.css
@@ -82,6 +82,8 @@ header {
 
 .logo {
     margin-right: 1em;
+    flex-grow: 1;
+    flex-shrink: 1;
 }
 
 .navbar {
@@ -89,6 +91,8 @@ header {
     align-items: center;
     justify-content: space-around;
     width: 100%;
+
+    flex-shrink: 2;
 
     /* border: 2px solid pink; */
 }
@@ -272,6 +276,12 @@ footer {
     padding: 3em 0;
 }
 
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .social__media {
     margin: 3em 0;
 }
@@ -358,4 +368,32 @@ footer {
 .primaryBtn:hover {
     transform: translateY(-5px);
     box-shadow: 0 10px 20px -10px rgba(24, 90, 219, 0.6);
+}
+
+/* media queries */
+
+
+@media (max-width: 760px) {
+    .navbar {
+        background-color: lime;
+        display: none;
+    }
+}
+
+@media (max-width: 600px) {
+    .hero {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .logo__area {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .footer {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
 }
